--- a/main/stripe_test_task/templates/stripe_test_task/item.html
+++ b/main/stripe_test_task/templates/stripe_test_task/item.html
@@ -7,14 +7,15 @@
     <p>Description of {{ item.name }}</p>
     <p>{{ item.description }}</p>
     <button id="buy-button">Buy</button>
+    <script src="https://js.stripe.com/v3/"></script>
     <script type="text/javascript">
-      var stripe = Stripe('pk_test_a9nwZVa5O7b0xz3lxl318KSU00x1L9ZWsF');
-      var buyButton = document.getElementById(buy-button');
+      var stripe = Stripe('pk_test_51MaN7mCFMtaIIRBSgzg8s8gNQbcSYcuQu4sqH9NJkGnhTHlKDALgEA6duDjjU8trLAipoXzPklzlEa60fROqTHE300H1SiqZ0z');
+      var buyButton = document.getElementById('buy-button');
       buyButton.addEventListener('click', function() {
         // Create a new Checkout Session using the server-side endpoint
         // Redirect to Stripe Session Checkout
         fetch('/buy/{{ item.pk }}', {method: 'GET'})
-        .then(response => return response.json())
+        .then(response => response.json())
         .then(session => stripe.redirectToCheckout({ sessionId: session.id }))
       });
     </script>
